# roi

./: .gitignore  README.md  async.profile  baseasync.profile  howto.txt  processing.txt  profile.html  pyproject.toml  strange.profile
cachegrind/: cachegrind.out.prof  workflow.cprof
src/: setup.py  todo.md
src/content/: domain.py  logic.py
src/orchestration/: beam_workflow.py  beamorch.py  count.py  prefect_workflow.py  prefectorch.py  tst.py
src/persistence/: filesystem.py
src/processing/web/: domain.py  logic.py  persistence.py  processing.py
src/roi_utils/: __init__.py  logging.py  monad.py  persistence.py
src/roi_web/: __init__.py  domain.py  parsing.py  persistence.py  process.py  processing.py
src/roi_web/retraf/: htmlprocessing.py  metadata.py
src/utils/: monad.py
src/workflows/: async_workflow.py  beam_workflow.py  bert.py  create_page.py  lda.py  nmf.py  prefect_workflow.py  scrapy_workflow.py
test/roi_web/: test_youtube.py
