[tool.poetry]
name = "roi"
version = "0.1.0"
description = ""
authors = ["Mateus Canelhas <mateus.canelhas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
trafilatura = "^1.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
