[tool.poetry]
name = "roi"
version = "0.1.0"
description = ""
authors = ["Mateus Canelhas <mateus.canelhas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
trafilatura = "^1.2.2"
luigi = "^3.0.3"
apache-beam = "^2.39.0"
pandas = "^1.4.2"
aiohttp = "^3.8.1"
warcio = "^1.7.4"
aiofiles = "^0.8.0"
PyMuPDF = "^1.20.1"
aiologger = "^0.6.1"
aiofile = "^3.7.4"
Scrapy = "^2.6.2"
networkx = "^2.8.6"
matplotlib = "^3.5.3"
boto3 = "^1.24.68"
nltk = "^3.7"
spacy = "^3.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
